feat: remove sistema de niveis de escalonamento
- Remove tabelas config_escalonamento e config_escalonamento_destinatarios
- Senhas vigia passam a ter atraso_minutos e destinatarios diretamente
- Remove config_escalonamento_repository.go e todos os CRUDs de nivel
- TimeoutChecker agora consulta senhas do vigia em vez de niveis
- Remove rotas /config/escalonamento e handlers associados
- Remove ProvisionarPadrao de empresa_service e seed
- Migration 000031 remove_escalonamento com migracao de dados
- Regenera docs swagger
